# contractflo

./: .gitignore  README.md  skills-lock.json
.agents/skills/supabase/: SKILL.md
.cursor/: mcp.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: contracts.py  deps.py  models.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  health.py
backend/app/core/: config.py  logging.py  version.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/tests/: conftest.py  test_health.py
docs/: architecture.md  development-guidelines.md  roadmap.md  vision.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/(protected)/contracts/: page.tsx
frontend/app/(protected)/dashboard/: page.tsx
frontend/app/actions/: auth.ts  orgs.ts
frontend/components/ui/: button.tsx  textarea.tsx
frontend/hooks/: index.ts
frontend/lib/: api.ts  constants.ts
frontend/lib/supabase/: middleware.ts  server.ts
frontend/types/: index.ts
scripts/: setup-dev.ps1  setup-dev.sh
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260715000000_init_auth_orgs.sql  20260716000000_contract_repository.sql
(+3 files in other folders)
